--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-  "start": "node ./bin/www",
-  "build": "babel ./bun/www -d dist",
-  "test": "jest"
+    "start": "node ./bin/www",
+    "build": "babel ./bun/www -d dist",
+    "test": "jest",
+     "lint": "eslint .",
+      "start-dev": "npm run lint && npm start"
   },
   "dependencies": {
     "and": "^0.0.3",
+    "bcrypt": "^6.0.0",
     "build": "^0.1.4",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
@@ -16,13 +19,15 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11",
-    "bcrypt": "^6.0.0"
+    "eslint-plugin-jest": "^29.0.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.28.3",
     "@babel/core": "^7.28.4",
     "@babel/preset-env": "^7.28.3",
+    "@eslint/js": "^9.37.0",
+    "eslint": "^9.37.0",
+    "globals": "^16.4.0",
     "jest": "^30.2.0"
-
   }
 }
